--- a/documentation.textile
+++ b/documentation.textile
@@ -2,6 +2,10 @@
 title: Immutable Collections Library for Javascript: The Documentation
 ---
 
+<head>
+	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
+</head>
+
 h1. Immutable Collections Library for Javascript: The Documentation
 
 # "About":http://mads379.github.com/bachelorproject/
