--- a/index.textile
+++ b/index.textile
@@ -2,6 +2,10 @@
 title: Immutable Collections Library for Javascript
 ---
 
+<head>
+	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
+</head>
+
 h1. Immutable Collections Library for Javascript
 
 # About
