--- a/index.textile
+++ b/index.textile
@@ -5,6 +5,7 @@ title: Immutable Collections Library for Javascript
 <head>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 </head>
+<div id="container">
 
 h1. Immutable Collections Library for Javascript
 
@@ -29,3 +30,5 @@ You can also clone the project with "Git":http://git-scm.com by running:<pre>$ g
 get the source code on "GitHub":http://github.com/mads379/bachelorproject.
 
 fn1. http://jashkenas.github.com/coffee-script/
+
+</div>
