--- a/paper.textile
+++ b/paper.textile
@@ -5,6 +5,7 @@ title: Immutable Collections Library for Javascript: The Paper
 <head>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 </head>
+<div id="container">
 
 h1. Immutable Collections Library for Javascript: The Paper
 
@@ -59,3 +60,6 @@ fn1. http://code.google.com/closure/
 fn2. Speciale af Thomas Stjernegaard Jeppesen
 
 fn3. http://jashkenas.github.com/coffee-script/
+
+
+</div>
