--- a/index.textile
+++ b/index.textile
@@ -4,6 +4,7 @@ title: Immutable Collections Library for Javascript
 
 <head>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
+	<link rel="stylesheet" href="http://mads379.github.com/bachelorproject/css/screen.css" type="text/css" media="screen" title="no title" charset="utf-8">
 </head>
 <div id="container">
 
