--- a/paper.textile
+++ b/paper.textile
@@ -5,14 +5,17 @@ title: Immutable Collections Library for Javascript: The Paper
 <head>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 	<link rel="stylesheet" href="http://mads379.github.com/bachelorproject/css/screen.css" type="text/css" media="screen" title="no title" charset="utf-8">	
+	<!-- <link rel="stylesheet" href="file:///Users/Mads/dev/projects/bachelorproject/css/screen.css" type="text/css" media="screen" title="no title" charset="utf-8"> -->
+	
 </head>
 <div id="container">
 
-h1. Immutable Collections Library for Javascript: The Paper
+h1. Immutable Collections Library for Javascript <br /> _The Paper_
 
 # "About":http://mads379.github.com/bachelorproject/
 # "Documentation":http://mads379.github.com/bachelorproject/documentation
 # Paper
+
 
 h2(#table_of_contents). Table of Contents 
 
@@ -20,6 +23,7 @@ h2(#table_of_contents). Table of Contents
 ## "Problem Definition":#problem_definition
 # "Background and description of the problem":#background_and_description_of_the_problem
 # "Problem analysis":#problem_analysis
+## "The case for immutability":#the_case_for_immutability
 ## "Selected Data Structures":#selected_data_structures
 # "User’s guide and examples":#users_guide_and_examples
 # "Technical description of the program":#technical_description_of_the_program
@@ -43,6 +47,10 @@ The project will include a set of performance tests that evaluate the data-struc
 h2(#background_and_description_of_the_problem). Background and description of the problem
 
 h2(#problem_analysis). Problem analysis
+
+h3(#the_case_for_immutability). The case for immutability 
+
+A description of why I've chosen immutability
 
 h3(#selected_data_structures). Selected Data Structures
 
