--- a/index.textile
+++ b/index.textile
@@ -11,7 +11,7 @@ title: Immutable Collections Library for Javascript
 h1. Immutable Collections Library for Javascript
 
 # About
-# "The Documentation":http://mads379.github.com/bachelorproject/documentation
+# "The API":http://mads379.github.com/bachelorproject/api
 # "The Paper":http://mads379.github.com/bachelorproject/paper
 
 h2. About
