--- a/index.textile
+++ b/index.textile
@@ -6,13 +6,16 @@ title: Immutable Collections Library for Javascript
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 	<link rel="stylesheet" href="http://mads379.github.com/bachelorproject/css/screen.css" type="text/css" media="screen" title="no title" charset="utf-8">
 </head>
+
+
+<h1 class="header">Immutable Collections Library for Javascript</h1>
+<ol id="menu">
+	<li>About</li>
+	<li>"The API":http://mads379.github.com/bachelorproject/api</li>
+	<li>"The Paper":http://mads379.github.com/bachelorproject/paper</li>
+</ol>
+
 <div id="container">
-
-h1. Immutable Collections Library for Javascript
-
-# About
-# "The API":http://mads379.github.com/bachelorproject/api
-# "The Paper":http://mads379.github.com/bachelorproject/paper
 
 h2. About
 
