--- a/paper.textile
+++ b/paper.textile
@@ -87,7 +87,7 @@ The library contains an implementation of the following abstract data types:
 # Random Access List (TODO)
 # Priority Queue (TODO)
 
-h3(##comparison_with_other_collections). Comparison with other collection libraries
+h3(#comparison_with_other_collections). Comparison with other collection libraries
 
 This section will compare this library with the Google Closure Library and attempt to justify the creation of a new library.
 
@@ -108,32 +108,34 @@ The two main reasons I've chosen to write this library in Coffeescript is that i
 Here's a couple of Coffeescript examples and the resulting Javascript outputted by the compiler. The goal of these examples is to show the simplicity of Coffeescript and the readability of output. For a extensive description of the entire language, please go to the "Coffeescript homepage":http://jashkenas.github.com/coffee-script/ for more information
 
 <table border="1px">
+	<thead>
 	<tr>
 		<td width="40%">*Coffeescript*</td>
 		<td width="40%">*Javascript*</td>
 	</tr>
+	</thead>
 	<tr>
 		<td><code>(x,y) -> x+y</code></td>
-		<td><code>(function(x, y) {
+		<td><code>(function(x, y) {    
   return x + y;    
 });</code></td>
 	</tr>
 	<tr>
 		<td>
-			<code>Nil = () -> 
-  this.head    = new None()
-  this.tail    = new None()
-  this.isEmpty = () -> true
+			<code>Nil = () ->    
+  this.head    = new None()    
+  this.tail    = new None()    
+  this.isEmpty = () -> true    
   this</code>
 		</td>
-		<td><code>var Nil;
-Nil = function() {
-  this.head = new None();
-  this.tail = new None();
-  this.isEmpty = function() {
-    return true;
-  };
-  return this;
+		<td><code>var Nil;    
+Nil = function() {    
+  this.head = new None();    
+  this.tail = new None();    
+  this.isEmpty = function() {    
+    return true;    
+  };    
+  return this;    
 };</code></td>
 	</tr>
 </table>
